Trying to fix height on mobile

--- a/src/Screens/ChatScreen.css
+++ b/src/Screens/ChatScreen.css
@@ -69,9 +69,7 @@
         justify-content: flex-end;
         gap: 20px;
     }
-    .screen{
-        min-height: 100vh;
-    }
+    
     .mobile-hide{
         display: none;
     }
